hphp/hack/test/typecheck/nonnull/nonnull_type_alias.php.exp
File "nonnull_type_alias.php", line 3, characters 6-12:
NonNull cannot be used as it is reserved. (Naming[2068])
